laborations/lab2/testsuite/bad/redecl-fun-built-in.cc
void printInt(int x) {}

int main() {
  printInt(5);
}
